fix: mobile cta is now visible

--- a/src/assets/less/root.less
+++ b/src/assets/less/root.less
@@ -3577,7 +3577,7 @@
 
     .cs-title,
     .cs-text {
-      color: var(--bodyTextColorWhite);
+      // color: var(--bodyTextColorWhite);
     }
 
     .cs-text {
